--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">e-shop</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
+            aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+    </nav>
 
 </body>
 
