--- a/index.html
+++ b/index.html
@@ -18,14 +18,34 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-md fixed-top navbar-light bg light">
         <a class="navbar-brand" href="#">e-shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
             aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <div collapse navbar-collapse id="mobile-menu">
+            <ul class="navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Clothing</a>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">Outfits</a>
+                        <a href="#" class="dropdown-item">Tops</a>
+                        <a href="#" class="dropdown-item">Bottoms</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Lingerie</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Shoes</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Accessories</a>
+                </li>
+            </ul>
 
-
+        </div>
     </nav>
 
 </body>
