--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-light bg light">
+
+
+
         <a class="navbar-brand" href="#">e-shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
             aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div collapse navbar-collapse id="mobile-menu">
+        <div class="collapse navbar-collapse ml-auto" id="mobile-menu">
             <ul class="navbar-nav">
                 <li class="dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Clothing</a>
@@ -44,7 +47,10 @@
                     <a href="#" class="nav-link">Accessories</a>
                 </li>
             </ul>
-
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary"><i class="fas fa-shopping-cart"></i>Cart</button>
+                <button type="button" class="btn btn-secondary"><i class="fas fa-user"></i>Account</button>
+            </div>
         </div>
     </nav>
 
