--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-light bg light">
-
-
-
+    <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">e-shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
             aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +50,36 @@
             </div>
         </div>
     </nav>
+    <div id="main-slider" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="w-100" src="https://i.postimg.cc/SswsyHnj/pexels-photo.jpg" alt="image">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="w-100" src="https://i.postimg.cc/BvRsDH4V/pexels-photo-730896.jpg" alt="image">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="w-100" src="https://i.postimg.cc/sxrrHzBP/pexels-photo-1022158.jpg" alt="image">
+                <div class="carousel-caption">
+
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#main-slider" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#main-slider" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 </body>
 
