modify navbar for mobile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">e-shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu"
@@ -44,12 +46,15 @@
                     <a href="#" class="nav-link">Accessories</a>
                 </li>
             </ul>
-            <div class="btn-group" role="group" aria-label="Basic example">
+
+            <div class="btn-group ml-auto" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary"><i class="fas fa-shopping-cart"></i>Cart</button>
                 <button type="button" class="btn btn-secondary"><i class="fas fa-user"></i>Account</button>
             </div>
         </div>
     </nav>
+
+    <!-- Slider -->
     <div id="main-slider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
