--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
     <div id="main-slider" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="https://i.postimg.cc/SswsyHnj/pexels-photo.jpg" alt="image">
+                <img class="w-100" src="./Module 2 Assets/1.jpeg" alt="image">
                 <div class="carousel-caption">
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="https://i.postimg.cc/BvRsDH4V/pexels-photo-730896.jpg" alt="image">
+                <img class="w-100" src="./Module 2 Assets/2.jpeg" alt="image">
                 <div class="carousel-caption">
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="https://i.postimg.cc/sxrrHzBP/pexels-photo-1022158.jpg" alt="image">
+                <img class="w-100" src="./Module 2 Assets/3.jpeg" alt="image">
                 <div class="carousel-caption">
 
                 </div>
