create section products

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                     <a href="#" class="nav-link">Accessories</a>
                 </li>
             </ul>
-
             <div class="btn-group ml-auto" role="group" aria-label="Basic example">
                 <button type="button" class="btn btn-secondary"><i class="fas fa-shopping-cart"></i>Cart</button>
                 <button type="button" class="btn btn-secondary"><i class="fas fa-user"></i>Account</button>
@@ -60,19 +59,25 @@
             <div class="carousel-item active">
                 <img class="w-100" src="./Module 2 Assets/1.jpeg" alt="image">
                 <div class="carousel-caption">
-
+                        <h4>New arrival</h4>
+                        <h3>Nulla maximus</h3>
+                        <a href="#" class="btn btn-primary">Shop now</a>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="./Module 2 Assets/2.jpeg" alt="image">
                 <div class="carousel-caption">
-
+                    <h4>New arrival</h4>
+                    <h3>Criss Rickson</h3>
+                    <a href="#" class="btn btn-primary">Shop now</a>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="./Module 2 Assets/3.jpeg" alt="image">
                 <div class="carousel-caption">
-
+                        <h4>New arrival</h4>
+                        <h3>Patricia Pepe</h3>
+                        <a href="#" class="btn btn-primary">Shop now</a>
                 </div>
             </div>
         </div>
@@ -85,6 +90,17 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+<!-- Section two columns -->
+<section class="products py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-9"></div>
+        </div>
+    </div>
+
+</section>
 
 </body>
 
