--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div class="carousel-item active">
                 <img class="w-100" src="./Module 2 Assets/1.jpeg" alt="image">
                 <div class="carousel-caption">
-                        <h4>New arrival</h4>
-                        <h3>Nulla maximus</h3>
-                        <a href="#" class="btn btn-primary">Shop now</a>
+                    <h4>New arrival</h4>
+                    <h3>Nulla maximus</h3>
+                    <a href="#" class="btn btn-primary">Shop now</a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -75,9 +75,9 @@
             <div class="carousel-item">
                 <img class="w-100" src="./Module 2 Assets/3.jpeg" alt="image">
                 <div class="carousel-caption">
-                        <h4>New arrival</h4>
-                        <h3>Patricia Pepe</h3>
-                        <a href="#" class="btn btn-primary">Shop now</a>
+                    <h4>New arrival</h4>
+                    <h3>Patricia Pepe</h3>
+                    <a href="#" class="btn btn-primary">Shop now</a>
                 </div>
             </div>
         </div>
@@ -91,16 +91,26 @@
         </a>
     </div>
 
-<!-- Section two columns -->
-<section class="products py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-9"></div>
-        </div>
-    </div>
+    <!-- Section two columns -->
+    <section class="products py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <h2>Brands</h2>
+                    <div class="list-group flex-sm-row flex-lg-column">
+                        <a class="list-group-item list-group-item-action">Vivamus</a>
+                        <a class="list-group-item list-group-item-action">Etiam</a>
+                        <a class="list-group-item list-group-item-action">Praesent</a>
+                        <a class="list-group-item list-group-item-action">Aerean</a>
+                        <a class="list-group-item list-group-item-action">Vestibulum</a>
+                    </div>
 
-</section>
+                </div>
+                <div class="col-lg-9"></div>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
