--- a/index.html
+++ b/index.html
@@ -108,41 +108,33 @@
                 </div>
                 <div class="col-lg-9">
                     <h2>New arrivals</h2>
-                    <div class="row">
+                    <div class="row ">
                         <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
-                            <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                            <img class="card-img-top" src="./Module 2 Assets/4.jpeg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Phassellus rhoncus</h5>
+                                <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
                         <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
-                            <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                            <img class="card-img-top" src="./Module 2 Assets/5.jpeg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Sed tincidunt</h5>
+                                <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
                         <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
-                            <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                            <img class="card-img-top" src="./Module 2 Assets/6.jpeg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Suspendisse</h5>
+                                <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-                        <div class="card col-sm-6 col-lg-4-print-none" style="width: 18rem;">
-                            <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                        <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
+                            <img class="card-img-top" src="./Module 2 Assets/7.jpeg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Phassellus rhoncus</h5>
+                                <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
 
