--- a/index.html
+++ b/index.html
@@ -137,15 +137,46 @@
                                 <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
         </div>
-
     </section>
+
+
+    <!-- Three bricks column section-->
+    <section class="ideas py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ">
+                    <div class="card mb-3 align-items-center justify-content-center">
+                        <img class="card-img" src="./Module 2 Assets/8.jpeg" alt="Card image cap">
+                        <div class="card-body position-absolute">
+                            <h5 class="card-title">Winter sale</h5>
+                            <a href="#" class="btn btn-primary">See deals</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3 align-items-center justify-content-center">
+                        <img class="card-img" src="./Module 2 Assets/9.jpeg" alt="Card image cap">
+                        <div class="card-body position-absolute">
+                            <h5 class="card-title">Look book</h5>
+                             <a href="#" class="btn btn-primary">Get inspired</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-100">
+                    <div class=" card mb-3 align-items-center justify-content-center">
+                        <img class="card-img" src="./Module 2 Assets/10.jpeg" alt="Card image cap">
+                        <div class="card-body position-absolute">
+                            <h5 class="card-title">News and ideas</h5>
+                            <a href="#" class="btn btn-primary">Go to e-shop blog</a>
+                        </div>
+                    </div>
+                </div>
+    </section>
+
 
 </body>
 
