--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <img class="card-img" src="./Module 2 Assets/9.jpeg" alt="Card image cap">
                         <div class="card-body position-absolute">
                             <h5 class="card-title">Look book</h5>
-                             <a href="#" class="btn btn-primary">Get inspired</a>
+                            <a href="#" class="btn btn-primary">Get inspired</a>
                         </div>
                     </div>
                 </div>
@@ -175,6 +175,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </section>
 
 
