--- a/index.html
+++ b/index.html
@@ -178,7 +178,19 @@
             </div>
         </div>
     </section>
-    <section class=""
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 "></div>
+                <div class="col-md-4 "></div>
+                <div class="col-md-4 "></div>
+
+            </div>
+        </div>
+
+
+
+    </section>
 
 
 </body>
