--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-4">
-                            <img src="..." class="card-img" alt="...">
+                          <div class="col-md-2">
+                            <i class="fas fa-truck"></i>
                           </div>
-                          <div class="col-md-8">
+                          <div class="col-md-10">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -200,10 +200,10 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-4">
-                            <img src="..." class="card-img" alt="...">
+                          <div class="col-md-2">
+                            <i class="fas fa-money-bill-wave-alt"></i>
                           </div>
-                          <div class="col-md-8">
+                          <div class="col-md-10">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -216,10 +216,10 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-4">
-                            <img src="..." class="card-img" alt="...">
+                          <div class="col-md-2">
+                            <i class="fas fa-life-ring"></i>
                           </div>
-                          <div class="col-md-8">
+                          <div class="col-md-10">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
