--- a/index.html
+++ b/index.html
@@ -182,52 +182,49 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 ">
-                    <div class="card mb-3" style="max-width: 540px;">
+                    <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-2">
-                            <i class="fas fa-truck"></i>
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <div class="col-md-2">
+                                <i class="fas fa-truck pt-4 pl-3"></i>
                             </div>
-                          </div>
+                            <div class="col-md-10">
+                                <div class="card-body">
+                                    <h3 class="card-title">Free shipping</h3>
+                                    <p class="card-text">Curabitur eget ligula nisl</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="card mb-3" style="max-width: 540px;">
+                    <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-2">
-                            <i class="fas fa-money-bill-wave-alt"></i>
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <div class="col-md-2">
+                                <i class="fas fa-money-bill-wave-alt pt-4 pl-3"></i>
                             </div>
-                          </div>
+                            <div class="col-md-10">
+                                <div class="card-body">
+                                    <h3 class="card-title">60-day refund</h3>
+                                    <p class="card-text">Curabitur eget ligula nisl</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 ">
-                    <div class="card mb-3" style="max-width: 540px;">
+                    <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                          <div class="col-md-2">
-                            <i class="fas fa-life-ring"></i>
-                          </div>
-                          <div class="col-md-10">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <div class="col-md-2">
+                                <i class="fas fa-life-ring pt-4 pl-3"></i>
                             </div>
-                          </div>
+                            <div class="col-md-10">
+                                <div class="card-body">
+                                    <h5 class="card-title">24/7 support</h5>
+                                    <p class="card-text">Curabitur eget ligula nisl</p>
+                                </div>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
 
             </div>
