add stylefrom Bootstrap  for hiding elements

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-                        <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
+                        <div class="card col-sm-6 col-lg-4 d-lg-none" style="width: 18rem;">
                             <img class="card-img-top" src="./Module 2 Assets/7.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Phassellus rhoncus</h5>
@@ -184,7 +184,7 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                            <div class="col-md-2">
+                            <div class="col-md-2 d-none d-md-block">
                                 <i class="fas fa-truck pt-4 pl-3"></i>
                             </div>
                             <div class="col-md-10">
@@ -199,7 +199,7 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                            <div class="col-md-2">
+                            <div class="col-md-2 d-none d-md-block">
                                 <i class="fas fa-money-bill-wave-alt pt-4 pl-3"></i>
                             </div>
                             <div class="col-md-10">
@@ -214,7 +214,7 @@
                 <div class="col-md-4 ">
                     <div class="card mb-3 p-3" style="max-width: 540px;">
                         <div class="row no-gutters">
-                            <div class="col-md-2">
+                            <div class="col-md-2 d-none d-md-block">
                                 <i class="fas fa-life-ring pt-4 pl-3"></i>
                             </div>
                             <div class="col-md-10">
