center text and button in ideas section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-md-6 ">
                     <div class="card mb-3 align-items-center justify-content-center">
                         <img class="card-img" src="./Module 2 Assets/8.jpeg" alt="Card image cap">
-                        <div class="card-body position-absolute">
+                        <div class="card-body position-absolute text-center">
                             <h5 class="card-title">Winter sale</h5>
                             <a href="#" class="btn btn-primary">See deals</a>
                         </div>
@@ -160,7 +160,7 @@
                 <div class="col-md-6">
                     <div class="card mb-3 align-items-center justify-content-center">
                         <img class="card-img" src="./Module 2 Assets/9.jpeg" alt="Card image cap">
-                        <div class="card-body position-absolute">
+                        <div class="card-body position-absolute text-center">
                             <h5 class="card-title">Look book</h5>
                             <a href="#" class="btn btn-primary">Get inspired</a>
                         </div>
@@ -169,7 +169,7 @@
                 <div class="w-100">
                     <div class=" card mb-3 align-items-center justify-content-center">
                         <img class="card-img" src="./Module 2 Assets/10.jpeg" alt="Card image cap">
-                        <div class="card-body position-absolute">
+                        <div class="card-body position-absolute text-center">
                             <h5 class="card-title">News and ideas</h5>
                             <a href="#" class="btn btn-primary">Go to e-shop blog</a>
                         </div>
