--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <!-- section contact -->
     <section class="contact p-5">
         <div class="container">
-            <div class="row">
+            <div class="row px-5 mb-3">
                 <div class="col-md-4">
                     <form>
                         <div class="form-group">
