--- a/index.html
+++ b/index.html
@@ -258,8 +258,16 @@
                             <h5 class="card-title">HARBINGER</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f"></i>Facebook
+                                    </a>
+                                </li>
+                                <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
+                                <li><a href="#"><i class="fab fa-twitter"></i></i>Twitter</a></li>
+                                <li><a href="#"><i class="fab fa-youtube">Youtube</i></a> </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
