--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                                     </a>
                                 </li>
                                 <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></i>Twitter</a></li>
-                                <li><a href="#"><i class="fab fa-youtube">Youtube</i></a> </li>
+                                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                                <li><a href="#"><i class="fab fa-youtube"></i>Youtube</a></li>
                             </ul>
                         </div>
                     </div>
@@ -276,8 +276,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Some quick example text to build on the card title.</p>
                             <a href="#" class="card-link">Card link</a>
                             <a href="#" class="card-link">Another link</a>
                         </div>
