modify contact section

--- a/index.html
+++ b/index.html
@@ -240,46 +240,37 @@
                         <div class="form-group">
                             <h6 class="card-subtitle">Newsletter</h5>
                                 <p>Lorem ipsum, dolor sit amet.</p>
-                                <label for="exampleInputEmail1"></label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
                                     aria-describedby="emailHelp" placeholder="Enter email">
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                                     anyone
                                     else.</small>
                         </div>
-
-
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">HARBINGER</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="fab fa-facebook-f"></i>Facebook
-                                    </a>
-                                </li>
-                                <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i>Youtube</a></li>
-                            </ul>
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">HARBINGER</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>Facebook
+                                </a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i>Youtube</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Contact us</h5>
+                        <p class="card-text">Some quick example text to build on the card title.</p>
+                        <a href="#" class="card-link">support@company.com</a>
                     </div>
                 </div>
             </div>
