add Bootstrap order to contact

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
     <!-- section contact -->
     <section class="contact p-5">
         <div class="container">
-            <div class="row px-5 mb-3">
-                <div class="col-md-4">
+            <div class="row d-flex px-5 mb-3">
+                <div class="col-md-4 order-md-1 order-sm-3">
                     <form>
                         <div class="form-group">
                             <h6 class="card-subtitle">Newsletter</h5>
@@ -249,7 +249,7 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 order-md-2 order-sm-1">
                     <div class="card-body">
                         <h5 class="card-title">HARBINGER</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -266,7 +266,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 order-md-3 order-sm-2 ">
                     <div class="card-body">
                         <h5 class="card-title">Contact us</h5>
                         <p class="card-text">Some quick example text to build on the card title.</p>
