--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="col-md-4 order-md-1 order-sm-3">
                     <form>
                         <div class="form-group">
-                            <h6 class="card-subtitle">Newsletter</h5>
+                            <h6 class="card-title">Newsletter</h5>
                                 <p>Lorem ipsum, dolor sit amet.</p>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
                                     aria-describedby="emailHelp" placeholder="Enter email">
