--- a/index.html
+++ b/index.html
@@ -275,7 +275,27 @@
                 </div>
             </div>
         </div>
+    </section>
 
+
+    <!--section footer  -->
+    <section class="footer px-5">
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col-md-4">
+                    <p>@ Harbinger LTD.</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="list inline">
+                        <li class="list-inline-item"><a href="#">About</a></li>
+                        <li class="list-inline-item"><a href="#">Delivery</a></li>
+                        <li class="list-inline-item"><a href="#">Returns</a></li>
+                        <li class="list-inline-item"><a href="#">Privacy policy</a></li>
+                        <li class="list-inline-item"><a href="#">Terms and condition</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
 
