--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <!--section footer  -->
     <section class="footer px-5">
         <div class="container">
-            <div class="row d-flex">
+            <div class="row d-flex align-items-center">
                 <div class="col-md-4">
                     <p>@ Harbinger LTD.</p>
                 </div>
