remove style from section-two-columns

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="w-100" src="./Module 2 Assets/1.jpeg" alt="image">
-                <div class="carousel-caption ">
+                <div class="carousel-caption">
                     <h4>New arrival</h4>
                     <h3>Nulla maximus</h3>
                     <a href="#" class="btn btn-primary">Shop now</a>
@@ -109,28 +109,28 @@
                 <div class="col-lg-9">
                     <h2>New arrivals</h2>
                     <div class="row ">
-                        <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
+                        <div class="card col-sm-6 col-lg-4">
                             <img class="card-img-top" src="./Module 2 Assets/4.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Phassellus rhoncus</h5>
                                 <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-                        <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
+                        <div class="card col-sm-6 col-lg-4">
                             <img class="card-img-top" src="./Module 2 Assets/5.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Sed tincidunt</h5>
                                 <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-                        <div class="card col-sm-6 col-lg-4" style="width: 18rem;">
+                        <div class="card col-sm-6 col-lg-4">
                             <img class="card-img-top" src="./Module 2 Assets/6.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Suspendisse</h5>
                                 <a href="#" class="btn btn-light">Add to cart</a>
                             </div>
                         </div>
-                        <div class="card col-sm-6 col-lg-4 d-lg-none" style="width: 18rem;">
+                        <div class="card col-sm-6 col-lg-4 d-lg-none">
                             <img class="card-img-top" src="./Module 2 Assets/7.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Phassellus rhoncus</h5>
